force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Additional_Fields_To_Query__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Additional_Fields_To_Query__c</fullName>
    <description>a list in the form [&quot;field1&quot;,&quot;field2&quot;...] which are fields that should additionally be queried for the table. These entries will not show up on the table but can be used by search-bar. Include namespaces if the field is part of a managed package.</description>
    <inlineHelpText>a list in the form [&quot;field1&quot;,&quot;field2&quot;...] which are fields that should additionally be queried for the table. These entries will not show up on the table but can be used by search-bar. Include namespaces if the field is part of a managed package.</inlineHelpText>
    <label>Additional Fields To Query</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>