force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Enable_Filter__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Filter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Displays filter button on the UI when checked and hides it from view when unchecked</description>
    <inlineHelpText>Displays filter button on the UI when checked and hides it from view when unchecked</inlineHelpText>
    <label>Enable Filter</label>
    <type>Checkbox</type>
</CustomField>