force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Enable_Single_Row_Selection__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Single_Row_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Single Row Selection</label>
    <type>Checkbox</type>
</CustomField>