force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Expanded_Row_Info__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expanded_Row_Info__c</fullName>
    <label>Expanded Row Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>