force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fields_To_Display__c</fullName>
    <description>A comma separated list in form [&quot;field1&quot;,&quot;field2&quot;...] which determine what fields to put onto the table. Include namespaces if the field is part of a managed package.</description>
    <inlineHelpText>A comma separated list in form [&quot;field1&quot;,&quot;field2&quot;...] which determine what fields to put onto the table. Include namespaces if the field is part of a managed package.</inlineHelpText>
    <label>Fields To Display</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>