force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Type__c</fullName>
    <description>The table you wish to define a customization for.</description>
    <inlineHelpText>The table you wish to define a customization for.</inlineHelpText>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pledge</fullName>
                <default>true</default>
                <label>Pledge</label>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Pledge Payment</fullName>
            </value>
            <value>
                <fullName>Gift to Pledge</fullName>
            </value>
            <value>
                <fullName>Expedited Session Recurring</fullName>
            </value>
            <value>
                <fullName>Expedited Session Pledge</fullName>
            </value>
            <value>
                <fullName>Expedited Session Gift</fullName>
            </value>
            <value>
                <fullName>Expedited Session Payment</fullName>
            </value>
            <value>
                <fullName>Expedited Bio Recurring</fullName>
            </value>
            <value>
                <fullName>Expedited Bio Pledge</fullName>
            </value>
            <value>
                <fullName>Expedited Bio Gift</fullName>
            </value>
            <value>
                <fullName>Mass Adjustment Designation Detail</fullName>
            </value>
            <value>
                <fullName>Expedited Session Installment Based Membership</fullName>
            </value>
            <value>
                <fullName>Expedited Session Auto Renewing Membership</fullName>
            </value>
            <value>
                <fullName>Expedited Session One-Time Membership</fullName>
            </value>
            <value>
                <fullName>Expedited Bio Installment Based Membership</fullName>
            </value>
            <value>
                <fullName>Expedited Bio Auto Renewing Membership</fullName>
            </value>
            <value>
                <fullName>Expedited Bio One-Time Membership</fullName>
            </value>
            <value>
                <fullName>Additional Pledge Table</fullName>
            </value>
            <value>
                <fullName>Additional Gift Table</fullName>
            </value>
            <value>
                <fullName>Additional Recurring Table</fullName>
            </value>
            <value>
                <fullName>Additional Expedited Bio Pledge</fullName>
            </value>
            <value>
                <fullName>Additional Expedited Bio Gift</fullName>
            </value>
            <value>
                <fullName>Additional Expedited Bio Recurring</fullName>
            </value>
            <value>
                <fullName>Additional Expedited Session Pledge</fullName>
            </value>
            <value>
                <fullName>Additional Expedited Session Gift</fullName>
            </value>
            <value>
                <fullName>Additional Expedited Session Recurring</fullName>
            </value>
            <value>
                <fullName>Additional Expedited Session Installment Based Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>