force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Hover_Text_Information__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hover_Text_Information__c</fullName>
    <label>Hover Text Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>