force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Table_Column__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Table_Column__c</fullName>
    <description>Define the columns to be used for salesforce Lightning:Datatable</description>
    <inlineHelpText>Define the columns to be used for salesforce Lightning:Datatable</inlineHelpText>
    <label>Table Column</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>