force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Table_Object_Search_Filter_Info_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Table_Object_Search_Filter_Info_List__c</fullName>
    <description>JSON list of object filter search information.
EX) [{ &quot;label&quot;:&quot;label Value&quot;, &quot;objectApi&quot;:&quot;ObjectApiNameValue&quot;, &quot;referenceApi&quot;:&quot;field That Looks up to search object or null to signify it is the search object&quot;, &quot;fieldsToQuery&quot;: [&quot;feidl1&quot;, &quot;field2&quot;,&quot;etc&quot;], &quot;defaultWhereClause&quot;: &quot;Stage == &apos;Active&apos;&quot;, &quot;allowFilter&quot; : true, &quot;displayTab&quot; : false, &quot;limit&quot;:&quot;49000&quot;, &quot;orderByField&quot;:&quot;Id&quot;, &quot;orderByDirection&quot;:&quot;ASC&quot;}]</description>
    <inlineHelpText>JSON list of object filter search information.
EX) [{ &quot;label&quot;:&quot;label Value&quot;, &quot;objectApi&quot;:&quot;ObjectApiNameValue&quot;, &quot;referenceApi&quot;:&quot;field That Looks up to search object or null to signify it is the search object&quot;, &quot;fieldsToQuery&quot;: [&quot;feidl1&quot;, &quot;field2&quot;,&quot;etc&quot;], &quot;defaultWhereClause&quot;: &quot;Stage == &apos;Active&apos;&quot;, &quot;allowFilter&quot; : true, &quot;displayTab&quot; : false, &quot;limit&quot;:&quot;49000&quot;, &quot;orderByField&quot;:&quot;Id&quot;, &quot;orderByDirection&quot;:&quot;ASC&quot;}]</inlineHelpText>
    <label>Table Object Search Filter Info List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>