force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tables_Setting__mdt/fields/ucinn_ascendv2__Table_Title__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Table_Title__c</fullName>
    <description>Title of the UI, table, tab, or information component.</description>
    <inlineHelpText>Title to display on top of the table.</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>